@@ -14,6 +14,7 @@ NEWS
   * [ssl] fix regression from CVE-2013-4508 (client-cert sessions were broken)
   * maintain physical.basedir (the "acting" doc-root as prefix of physical.path) in more places
   * [core] decode URL before rewrite, enabling it to work in $HTTP["url"] conditionals (fixes #2526)
+  * [auto* build] remove -no-undefined from linker flags, as we actually link modules with undefined symbols (fixes #2533)
 
 - 1.4.33 - 2013-09-27
   * mod_fastcgi: fix mix up of "mode" => "authorizer" in other fastcgi configs (fixes #2465, thx peex)
